# iot-simulator

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  renovate.json
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  TASK_TEMPLATE.md
app/iot-simulator-app/: Cargo.toml
app/iot-simulator-app/src/: app.rs  lib.rs  main.rs  server.rs
app/iot-simulator-app/style/: tailwind.css
app/iot-simulator-cli/: Cargo.toml
app/iot-simulator-cli/src/: main.rs
iot-simulator/: Cargo.toml  test.ron
iot-simulator-api/: Cargo.toml
iot-simulator-api/src/: generator.rs  lib.rs  output.rs  simulation.rs
iot-simulator-core/: Cargo.toml
iot-simulator-core/src/: config.rs  lib.rs  parser.rs  plugin.rs
iot-simulator-generator-faker/: Cargo.toml
iot-simulator-generator-faker/src/: lib.rs
iot-simulator-generator-sma/: Cargo.toml
iot-simulator-generator-sma/src/: lib.rs  lib_tests.rs
iot-simulator/src/: main.rs
lib/iot-simulator-api/: Cargo.toml
lib/iot-simulator-api/src/: channel.rs  generator.rs  lib.rs  output.rs  simulation.rs
lib/iot-simulator-core/: Cargo.toml
lib/iot-simulator-core/src/: emitter.rs  emitter_test.rs  lib.rs  parser.rs  plugin.rs  simulation.rs  time.pest  utils.rs
plugin/iot-simulator-generator-const/: Cargo.toml
plugin/iot-simulator-generator-const/src/: lib.rs  lib_tests.rs
plugin/iot-simulator-generator-sma/: Cargo.toml
plugin/iot-simulator-generator-sma/src/: lib.rs  lib_tests.rs
plugin/iot-simulator-output-stdout/: Cargo.toml
plugin/iot-simulator-output-stdout/src/: lib.rs  lib_tests.rs
testing/: settings.toml  test.ron
