[package]
name = "iot-simulator-generator-faker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iot-simulator-api = { path = "../iot-simulator-api", version = "*" }
fake = "2.4"
rand = "0.8"

[lib]
crate-type = ["dylib"]
