[package]
name = "iot-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-simulator-api = { path = "../iot-simulator-api", version = "*" }
iot-simulator-core = { path = "../iot-simulator-core", version = "*" }
clap = { version = "3.2.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
