[package]
name = "iot-simulator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-simulator-api = { path = "../../lib/iot-simulator-api", version = "*" }
iot-simulator-core = { path = "../../lib/iot-simulator-core", version = "*" }
clap = { version = "4.0.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3.3"
futures-util = "0.3.21"
once_cell = "1.13.0"

[dev-dependencies]
cargo-valgrind = "2.0.3"
