[package]
name = "iot-simulator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
rustc_version = "0.4.0"