[package]
name = "iot-simulator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
chrono = { version = "0.4", features = ["serde"] }
abi_stable = "0.11.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"

[build-dependencies]
rustc_version = "0.4.0"
