[package]
name = "iot-simulator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-simulator-api = { path = "../../lib/iot-simulator-api", version = "*" }
libloading = "0.7.3"
ron = "0.7"
home = "0.5.3"
config = { version = "0.13.1", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
