[package]
name = "iot-simulator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-simulator-api = { path = "../../lib/iot-simulator-api", version = "*" }
libloading = "0.8.0"
ron = "0.10"
home = "0.5.3"
config = { version = "0.15.0", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "js", "macro-diagnostics", "serde"] }
tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1"
async-stream = "0.3.3"
futures-util = "0.3.21"
futures-timer = "3.0.2"
once_cell = "1.13.0"
derivative = "2.2.0"
pest = "2.1.3"
pest_derive = "2.1.0"
abi_stable = "0.11.0"

[dev-dependencies]
tokio-test = "*"
