[package]
name = "iot-simulator-generator-const"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-simulator-api = { path = "../../lib/iot-simulator-api", version = "*" }
iot-simulator-core = { path = "../../lib/iot-simulator-core", version = "*" }
chrono = { version = "0.4", features = ["serde"] }
abi_stable = "0.11.0"

[lib]
crate-type = ["dylib"]
