[package]
name = "iot-simulator-output-stdout"
version = "0.1.0"
edition = "2021"

[dependencies]
iot-simulator-api = { path = "../../lib/iot-simulator-api", version = "*" }
iot-simulator-core = { path = "../../lib/iot-simulator-core", version = "*" }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
abi_stable = "0.11.0"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = { version = "1.0.141" }

[lib]
crate-type = ["dylib"]
